tests/neg-custom-args/captures/leaking-iterators.check
-- Error: tests/neg-custom-args/captures/leaking-iterators.scala:56:2 --------------------------------------------------
56 |  usingLogFile: log => // error
   |  ^^^^^^^^^^^^
   |  local reference log leaks into outer capture set of type parameter R of method usingLogFile
